# simple_algorithms

./: 01.cpp  02.cpp  03.cpp  05.cpp  README.md  meson.build  test_runner.sh
01/tests/: input_9.txt
02/: 02.cpp
03/tests/: input_3.txt  input_4.txt
04/: 04.cpp
05/: 05.cpp
05/tests/: input_3.txt
06/: 06.cpp
06/tests/: output_4.txt
07/: 07.cpp
07/tests/: input_3.txt  output_3.txt
08/: 08.cpp
09/: 09.cpp
09/tests/: input_2.txt
10/: 10.cpp
11/: 11.cpp
12/: 12.cpp
12/tests/: input_5.txt  output_4.txt  output_6.txt
13/: 13.cpp
14/: 14.cpp
15/: 15.cpp
15/tests/: input_8.txt
16/: 16.cpp
16/tests/: input_1.txt  input_4.txt  input_5.txt  output_5.txt
