project('simple_algorithms', 'cpp', version: '0.1',
    default_options : ['cpp_std=c++23'])

add_project_arguments('-Wall', '-Werror', '-Wstrict-aliasing',
    '-pedantic', '-fmax-errors=5', '-Wunreachable-code',
    '-Wcast-align', '-Wcast-qual', '-Wctor-dtor-privacy', '-Wdisabled-optimization',
    '-Wformat=2', '-Winit-self', '-Wlogical-op', '-Wmissing-include-dirs',
    '-Wnoexcept', '-Wold-style-cast', '-Woverloaded-virtual',
    '-Wredundant-decls', '-Wshadow', '-Wsign-promo', '-Wstrict-null-sentinel',
    '-Wstrict-overflow=5', '-Wswitch-default', '-Wundef', '-Wno-unused',
    '-Wno-variadic-macros', '-Wno-parentheses', '-fdiagnostics-show-option',
    language: 'cpp')

executable('01', '01/01.cpp')
executable('02', '02/02.cpp')
executable('03', '03/03.cpp')
executable('04', '04/04.cpp')
executable('05', '05/05.cpp')
executable('06', '06/06.cpp')
